# CODIGOS-AULA

./: CONDICIONAIS_DANIEL.ipynb  exercicio_resolvido.py
temp-converter/: README.md  pyproject.toml
temp-converter/docs/: conf.py
temp-converter/docs/_build/: genindex.html  index.html  objects.inv  search.html  searchindex.js
temp-converter/docs/_build/_sources/: index.rst.txt
temp-converter/src/temp_converter/: converter.py
temp-converter/tests/: test_converter.py
